style: Enhance layout and responsiveness

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <main class="font-primary">
-    <div class="flex flex-col bg-[url(../images/bg.png)] bg-no-repeat bg-center bg-cover lg:flex-row min-h-dvh">
+    <div class="flex flex-col bg-[url(../images/bg.png)] bg-no-repeat bg-center bg-cover lg:flex-row min-h-dvh max-w-[1200px] m-auto min-[1200px]:rounded-2xl min-[1200px]:my-4">
       <div class="lg:flex lg:w-full">
         <div class="bg-white px-5 lg:px-10 flex flex-col pt-20 w-full">
           <h1 class="font-logo text-6xl font-bold text-blue-700 mb-5">Credi<span class="text-black">lae</span></h1>
