--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <main class="font-primary">
     <div class="flex flex-col bg-[url(../images/bg.png)] bg-no-repeat bg-center bg-cover lg:flex-row min-h-dvh max-w-[1200px] m-auto min-[1200px]:rounded-2xl min-[1200px]:my-4">
       <div class="lg:flex lg:w-full">
-        <div class="bg-white px-5 lg:px-10 flex flex-col pt-20 w-full">
+        <div class="bg-white px-5 lg:px-10 flex flex-col pt-20 w-full justify-center">
           <h1 class="font-logo text-6xl font-bold text-blue-700 mb-5">Credi<span class="text-black">lae</span></h1>
           <div class="flex flex-col gap-2 mb-12">
             <h2 class="text-3xl font-bold font-primary">It seems you've hit a dead end</h2>
